[b]Version 0.5.63 (not released yet)[/b]:

(2008-01-03)
 * Now the GPL in English is in html too. From now on, all documents
   that smplayer have to load should be in html. This is because the
   debian packager compress all txt files, and so smplayer won't able
   to find them.

(2008-01-02)
 * Added a function to get the path of a translatable document. The 
   translatable documents should be (in the sources) in the docs subdir.
 * Now the GPL file is loaded from that path.
 * Added the Spanish and German translation of the GPL v2.

(2007-12-31)
 * Now the QTextBrowsers really should have the same background color as the
   near widgets.
 * Now the about dialog can show the version number of mplayer.
 * The about dialog displays the GPL in the license tab. Temporary the file
   with the GPL text is embedded in the smplayer executable. In the future it
   will be read from documentation directory.

(2007-12-30)
 * Replaced the QLabels and QTextEdits in the about dialog with QTextBrowsers,
   and changed the background colors.

(2007-12-29)
 * Split the section "Video and audio" in Preferences->General into 2 sections.
 * Added 3 icons in the about dialog (contributors.png, translators.png and 
   license.png), taken from Crystal Clear.
 * (By user request) Added "normal speed" to the list of actions available for
   mouse buttons.

(2007-12-27)
 * Added a new option in Preferences->General->Video and audio: change volume
   just before playing. This should fix the problem of the loud volume on
   startup. It sets the volume using the commandline option -volume, but
   WARNING: mplayer doesn't have such option, you need a patched mplayer!

(2007-12-26)
 * New about dialog, with some tabs.

(2007-12-24)
 * (Windows) Preferences->Drives shows only cdrom devices.

(2007-12-22)
 * (Windows) Now idx/sub subtitles should work also when using short names.
   So I think this stuff is finished.
 * Added the Finnish translation, sent by peeaivo <peeaivo@gmail.com>